# Ecobot_Sim

./: README.md
src/ecobot_description/: CMakeLists.txt  Ecobot.urdf  package.xml
src/ecobot_description/launch/: view_urdf.launch.py
src/ecobot_description/meshes/: 520µçú.stl  5x7x4ôÀëÖù.stl  5x7x5ôÀëÖù.stl  7-3-19.stl  M2.5-206.stl  M2.5x116.stl  TransbotÍÁªÖáÆ.stl  TransbotÖÂÖ.stl  cross-recessed-pan-head-screws-gb_GB_CROSS_SCREWS_TYPE1-M3X25-25--H-type-N.stl  cross-recessed-pan-head-screws-gb_GB_CROSS_SCREWS_TYPE1-M3X6-6--H-type-N.stl  cross-recessed-pan-head-screws-gb_GB_CROSS_SCREWS_TYPE1-M4X8-8--H-type-N.stl  spring-lock-washers--normal-type-gb_GB_FASTENER_WASHER_SW-4.stl  transbotÓÖá.stl  ³ÐÖØÂÖ-1_miniature-radial-ball-bearings-gb_PreviewCfg.stl  ³ÐÖØÂÖ_MF74zzÀ¼Öá³Ð.stl  ³ÐÖØÂÖ_Transbot-SE³ÐÖØÂÖ.stl  ³ÐÖØÂÖ_Transbot³ÐÖØÖá.stl  ³ÐÖØÂÖ_cross-recessed-pan-head-screws-gb_GB_CROSS_SCREWS_TYPE1-M2.5X5-5--H-type-N.stl  ³ÐÖØÂÖ_cross-recessed-pan-head-screws-gb_GB_CROSS_SCREWS_TYPE1-M3X8-8--H-type-S.stl  ³ÐÖØÂÖ_single-coil-lock-washers-light-type-gb_GB_FASTENER_WASHER_SSWL-3.stl  ³ÐÖØÂÖ_spring-lock-washers--normal-type-gb_GB_FASTENER_WASHER_SW-2.5.stl  ÀÕ¹åÄ_ÀÕ¹åÄ2ÀÕ¹åÄ_Board2ÀÕ¹åÄ2_ÀÕ¹åÄ.stl  ÀÕ¹åÄ_ÀÕ¹åÄ2ÀÕ¹åÄ_C31ÀÕ¹åÄ2_ÀÕ¹åÄ_User_Library-0603_SMD_Capacitor2C31_ÀÕ¹åÄ2_ÀÕ¹åÄ.stl  ÀÕ¹åÄ_ÀÕ¹åÄ2ÀÕ¹åÄ_C52ÀÕ¹åÄ2_ÀÕ¹åÄ_CAP_2.5X6.3X7C52_ÀÕ¹åÄ2_ÀÕ¹åÄ_CAP_2.5X6.3X7-0CAP_2.5X6.3X7_C52_ÀÕ¹åÄ2_ÀÕ¹åÄ.stl  ÀÕ¹åÄ_ÀÕ¹åÄ2ÀÕ¹åÄ_C52ÀÕ¹åÄ2_ÀÕ¹åÄ_CAP_2.5X6.3X7C52_ÀÕ¹åÄ2_ÀÕ¹åÄ_LOGO_CAP_2.5X6.3X7_C52_ÀÕ¹åÄ2_ÀÕ¹åÄ.stl  ÀÕ¹åÄ_ÀÕ¹åÄ2ÀÕ¹åÄ_D10ÀÕ¹åÄ2_ÀÕ¹åÄ_LED_SMD0603_BD10_ÀÕ¹åÄ2_ÀÕ¹åÄ.stl  (+59 more)
