<?xml version="1.0"?>
<package format="3">
  <name>ecobot_description</name>
  <version>0.0.1</version>
  <description>URDF and meshes for the Ecobot robot</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
